--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,5 +29,6 @@ add_executable(ASCIIart ${SOURCES} ${HEADERS})
 if (MSVC)
     target_link_libraries(ASCIIart PRIVATE PDCurses)
 else ()
-    target_link_libraries(ASCIIart PRIVATE ${CURSES_LIBRARIES})
+    find_library(CURSES_PANEL_LIBRARY panel)
+    target_link_libraries(ASCIIart PRIVATE ${CURSES_LIBRARIES} ${CURSES_PANEL_LIBRARY})
 endif ()
